<resources>
    <string name="app_name">AttendanceWatchSheet</string>

    <string-array name="Departments">
        <item>Math</item>
        <item>Computer Science</item>
        <item>Bla Bla</item>
    </string-array>
    <string name="course_name">Course Name:</string>
    <string name="good_day_username_sir"><![CDATA[Good Day <username> , Sir!]]></string>
    <string name="course_addition">Course Addition</string>
    <string name="assistant">Assistant :</string>
    <string name="cancel">CANCEL</string>
    <string name="create">CREATE</string>
    <string name="date_picker">Date Picker :</string>
    <string name="title_activity_courses__student">Courses_Student</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="courses">Courses</string>
    <string name="scan">Scan</string>
    <string name="item">Item</string>
    <string name="calendar">Calendar</string>
    <string name="attend">Attend</string>
    <string name="member">Member</string>
    <string name="title_activity_attandance_qrreader">AttandanceQrreaderActivity</string>

    <string-array name="WeekNo">
        <item>Week 1</item>
        <item>Week 2</item>
        <item>Week 3</item>
        <item>Week 4</item>
        <item>Week 5</item>
        <item>Week 6</item>
        <item>Week 7</item>
        <item>Week 8</item>
        <item>Week 9</item>
        <item>Week 10</item>
        <item>Week 11</item>
        <item>Week 12</item>
        <item>Week 13</item>
        <item>Week 14</item>
    </string-array>

    <string-array name="Days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string-array name="Hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_tag">Activity Tag</string>


</resources>
