<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Select_Course"
    tools:layout_editor_absoluteY="25dp">


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />

    <TextView
        android:id="@+id/GoodDayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="54dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/good_day_username_sir"
        app:layout_constraintBottom_toTopOf="@+id/labelText"
        app:layout_constraintEnd_toStartOf="@+id/settings"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelText"
        android:layout_width="61dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:text="@string/course_addition"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/settings"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/GoodDayText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:contentDescription="TODO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <Button
        android:id="@+id/settings"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_marginEnd="33dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="118dp"
        android:layout_height="139dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/form_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_name"
            tools:layout_editor_absoluteX="59dp"
            tools:layout_editor_absoluteY="143dp" />

        <TextView
            android:id="@+id/assistant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:text="@string/assistant" />

        <TextView
            android:id="@+id/syllabus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100px"
            android:text="TextView"
            tools:text="Syllabus :" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="162dp"
        android:layout_height="139dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/courselist"
            android:layout_width="151dp"
            android:layout_height="25dp"
            android:paddingBottom="50px"
            android:visibility="visible"
            tools:layout_editor_absoluteX="176dp"
            tools:layout_editor_absoluteY="143dp" />

        <Spinner
            android:id="@+id/assistantlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42px"
            android:visibility="visible" />

        <EditText
            android:id="@+id/syllabusLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45px"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="284dp"

        android:layout_height="189dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:maxHeight="171dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="187dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/gradeAdder"
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="75dp"
                    android:text="Grade Adder" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <EditText
        android:id="@+id/datepicker"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/datepickertext"
        app:layout_constraintHorizontal_bias="0.678"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/datepickertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:layout_marginTop="8dp"
        android:text="@string/date_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/createbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="9dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datepicker"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cancelbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toEndOf="@+id/createbtn"
        app:layout_constraintTop_toBottomOf="@+id/datepickertext"
        app:layout_constraintVertical_bias="0.007" />


</android.support.constraint.ConstraintLayout>