<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="always"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical"
    tools:context=".SelectCourse">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="78dp"
        android:layout_height="60dp"
        android:layout_marginEnd="33dp"
        android:layout_marginStart="2dp"
        app:layout_constraintEnd_toStartOf="@+id/Course"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/activityicon" />

    <TextView
        android:id="@+id/Course"
        android:layout_width="117dp"
        android:layout_height="41dp"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="Course"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/GoodDayText"
        app:layout_constraintEnd_toStartOf="@+id/settings"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/GoodDayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="54dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/good_day_username_sir"
        app:layout_constraintBottom_toTopOf="@+id/labelText"
        app:layout_constraintEnd_toStartOf="@+id/settings"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/Course" />

    <TextView
        android:id="@+id/labelText"
        android:layout_width="61dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/course_addition"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/settings"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toEndOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:contentDescription="TODO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <Button
        android:id="@+id/settings"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_marginEnd="33dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="118dp"
        android:layout_height="139dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="63dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/gradeText"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GoodDayText">

        <TextView
            android:id="@+id/form_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_name"
            tools:layout_editor_absoluteX="59dp"
            tools:layout_editor_absoluteY="143dp" />

        <TextView
            android:id="@+id/assistant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:text="@string/assistant" />

        <TextView
            android:id="@+id/syllabus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100px"
            android:text="TextView"
            tools:text="Syllabus :" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="162dp"
        android:layout_height="139dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelText"
        app:layout_constraintVertical_bias="0.0">

        <Spinner
            android:id="@+id/courselist"
            android:layout_width="151dp"
            android:layout_height="25dp"
            android:paddingBottom="50px"
            android:visibility="visible"
            tools:layout_editor_absoluteX="176dp"
            tools:layout_editor_absoluteY="143dp" />

        <Spinner
            android:id="@+id/assistantlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42px"
            android:visibility="visible" />

        <EditText
            android:id="@+id/syllabusLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45px"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="284dp"

        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:maxHeight="171dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ScrollView
            android:id="@+id/Midterm_View"
            android:layout_width="match_parent"
            android:layout_height="151dp">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:orientation="vertical">
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/createbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/create"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/gradeText"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:text="Midterm /Quiz/Att." />

    <Button
        android:id="@+id/gradeAdder"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="8dp"
        android:text="Grade Adder"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="385dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/windowBackground"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout5"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/navigation_instructor"
        app:itemIconTint="@color/bottom_nav_color"
        app:itemTextColor="@color/bottom_nav_color"
        />

    <Button
        android:id="@+id/cancelbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toEndOf="@+id/createbtn"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/percent"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toStartOf="@+id/gradeAdder"
        app:layout_constraintStart_toEndOf="@+id/gradeText"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:text="%" />

</android.support.constraint.ConstraintLayout>